RESOLVED FIXED12071
button with align attribute should not affect contained text
https://bugs.webkit.org/show_bug.cgi?id=12071
Summary button with align attribute should not affect contained text
Sam Weinig
Reported 2007-01-02 07:52:49 PST
Currently, a button element with align='left' or align='right' causes the text contained in the button to be aligned left or right respectively. Firefox always renders the content center-justified. Opera has the same behavior as us. I have not tested in IE6 or IE7.
Attachments
testcase (1.05 KB, text/html)
2007-01-02 07:53 PST, Sam Weinig
no flags
patch (46.73 KB, patch)
2007-01-02 10:15 PST, Sam Weinig
mitz: review+
Sam Weinig
Comment 1 2007-01-02 07:53:44 PST
Created attachment 12162 [details] testcase
Bradley Morrison
Comment 2 2007-01-02 08:05:08 PST
(In reply to comment #0) > I have not tested in IE6 or IE7. Like FF, IE6 has centred text on all buttons.
Sam Weinig
Comment 3 2007-01-02 10:15:11 PST
mitz
Comment 4 2007-01-02 10:18:44 PST
Comment on attachment 12165 [details] patch r=me
Sam Weinig
Comment 5 2007-01-02 10:40:43 PST
Landed in r18528.
Note You need to log in before you can comment on or make changes to this bug.