LayoutTests:

Reviewed by Mitz.

        Testcase for http://bugs.webkit.org/show_bug.cgi?id=12071

        * fast/forms/button-align-expected.checksum: Added.
        * fast/forms/button-align-expected.png: Added.
        * fast/forms/button-align-expected.txt: Added.
        * fast/forms/button-align.html: Added.

WebCore:

        Reviewed by Mitz.

        Patch for http://bugs.webkit.org/show_bug.cgi?id=12071
        button with align attribute should not affect contained text

        Don't map align for button elements.

        Test: fast/forms/button-align.html

        * html/HTMLButtonElement.cpp:
        (WebCore::HTMLButtonElement::parseMappedAttribute):



git-svn-id: svn://svn.chromium.org/blink/trunk@18528 bbb929c8-8fbe-4397-9dbb-9b2b20218538